src/test/ui/issues/issue-24819.stderr
error[E0308]: mismatched types
  --> $DIR/issue-24819.rs:5:9
   |
LL |     foo(&mut v);
   |         ^^^^^^ expected struct `HashSet`, found struct `Vec`
   |
   = note: expected type `&mut HashSet<u32>`
              found type `&mut Vec<_>`
             via imports `use std::collections::HashSet;`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
